<resources>
    <string name="app_name">Examen5</string>
    <string name="titulo">App Entrenos</string>
    <string name="entrenos">Últimos entrenos</string>
    <string name="logo_acc">Logo: chica corriendo</string>
    <string name="descrip_logo">Imagen del deporte realizado</string>
    <string name="calorias">KCAL</string>
    <string name="datos">Mi composición corporal</string>
    <string name="peso">Peso</string>
    <string name="altura">Altura</string>
    <string name="indice">IMC</string>
    <string name="pesomed">KG</string>
    <string name="alturamed">CM</string>
    <string name="indicemed">KG/M2</string>
    <string name="calculos">Registrar mis datos</string>
    <string name="calcularIMC">Calcular IMC</string>
    <string name="registrar">Registrar datos</string>
    <string name="cancelar">Cancelar</string>
    <string name="vovler">volver</string>
    <string name="aceptar">Aceptar</string>
    <string name="elegir">Elige su tipo de entrenamiento: </string>
    <string name="aniadirentreno">Añadir Entrenamiento</string>
    <string name="fecha">Fecha del Entrenamiento</string>
    <string name="duracion">Duración del Entrenamiento</string>
    <string name="hora">Hora del Entrenamiento</string>
    <string name="frecuencia">Frecuencia Cardiaca</string>


</resources>